deployment/k8s/tilt/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: tilt-ingress
  annotations:
    nginx.ingress.kubernetes.io/server-alias: "tilt.local.ii.coop, tilt.local.ii.nz, tilt.local.sharing.io"
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: basic-auth
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required - Tilt Console'
    # nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - host: tilt.localho.st
    http:
      paths:
      # - path: /tilt(/|$)(.*)
      - path: /
        backend:
          serviceName: kubemacs-tilt
          servicePort: 10350
